# crewai-studio

./: .gitignore  README.md  backend.py  readme.txt  requirements.txt  run_crew.py
my_crew/: README.md  pyproject.toml  report.md
my_crew/src/my_crew/: crew.py  main.py
my_crew/src/my_crew/config/: agents.yaml  tasks.yaml
my_crew/src/my_crew/tools/: custom_tool.py
ui/: package-lock.json  package.json
ui/app/: globals.css  layout.tsx  page.tsx  types.ts
ui/app/components/: AgentCard.tsx  PdfUploader.tsx  ResultPanel.tsx  TaskCard.tsx
ui/app/hooks/: useCrew.ts
