[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my_crew"
version = "0.1.0"
description = "CrewAI project"
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.80.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
my_crew = "my_crew.main:run"
train    = "my_crew.main:train"
replay   = "my_crew.main:replay"
test     = "my_crew.main:test"

[tool.hatch.build.targets.wheel]
packages = ["src/my_crew"]

[tool.crewai]
type = "crew"
